# fallout-76-build

./: .env.example  .gitignore  PROJECT_REVIEW.md  README.md  pyproject.toml
.omc/: project-memory.json
.omc/plans/: fo76-nukesdragons-style-build-board.md
.omc/sessions/: b053ce64-6041-4492-ae29-70d8029010be.json  c70ac756-43e3-41b8-a939-60eb5a0281cd.json
.omc/state/sessions/b053ce64-6041-4492-ae29-70d8029010be/: session-started.json
app/: main.py  models.py
app/data/: legendary_perks.json  perks.json  sources.json
app/db/: build_agent.db
app/services/: brain.py  build_pipeline.py  db.py  engine.py  llm_builder.py  ollama_client.py  prompting.py  providers.py  repair.py  repository.py
app/static/: compare.html  compare.js  index.html  index.js  planner.css  planner.html  planner.js  styles.css
src/fallout76_build_metadata/: models.py
src/fallout76_special_perk_agent.egg-info/: SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_api.py  test_brain.py  test_build_pipeline.py  test_classifier.py  test_compare.py  test_engine.py  test_llm_builder.py  test_models.py  test_perk_integrity.py  test_repair.py  test_repository.py
